@@ -10,6 +10,9 @@ import id.ac.ui.cs.advprog.mysawitpayment.model.enums.TransactionType;
 import id.ac.ui.cs.advprog.mysawitpayment.repository.WalletRepository;
 import id.ac.ui.cs.advprog.mysawitpayment.repository.WalletTransactionRepository;
 import id.ac.ui.cs.advprog.mysawitpayment.dto.result.WalletMutationResult;
+import id.ac.ui.cs.advprog.mysawitpayment.dto.request.internal.WalletCreationRequest;
+import id.ac.ui.cs.advprog.mysawitpayment.dto.response.internal.WalletCreationResponse;
+
 import org.mockito.ArgumentCaptor;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -28,6 +31,7 @@ import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
+import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -35,7 +39,10 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verifyNoInteractions;
+import static org.mockito.Mockito.any;
+import static org.mockito.Mockito.never;
 
 @ExtendWith(MockitoExtension.class)
 class WalletServiceImplTest {
@@ -166,7 +173,7 @@ class WalletServiceImplTest {
         assertEquals(1, result.getTotalElements());
         assertEquals(1, result.getContent().size());
 
-        WalletTransactionResponse response = result.getContent().get(0);
+        WalletTransactionResponse response = result.getContent().getFirst();
         assertEquals(transaction.getId(), response.getId());
         assertEquals("CREDIT", response.getTransactionType());
         assertEquals(new BigDecimal("500.00"), response.getAmount());
@@ -338,6 +345,63 @@ class WalletServiceImplTest {
                 "Payroll deduction"
         ));
 
+        verify(walletRepository).findByUserId(userId);
+        verifyNoInteractions(walletTransactionRepository);
+    }
+
+    @Test
+    void createWalletShouldReturnExistingWalletWhenWalletAlreadyExists() {
+        UUID walletId = UUID.randomUUID();
+        UUID userId = UUID.randomUUID();
+
+        WalletCreationRequest request = mock(WalletCreationRequest.class);
+        Wallet existingWallet = createWallet(walletId, userId);
+
+        when(request.getUserId()).thenReturn(userId);
+        when(walletRepository.findByUserId(userId)).thenReturn(Optional.of(existingWallet));
+
+        WalletCreationResponse result = walletService.createWallet(request);
+
+        assertNotNull(result);
+        assertEquals(walletId, result.getWalletId());
+        assertTrue(result.isAlreadyProcessed());
+
+        verify(request).getUserId();
+        verify(walletRepository).findByUserId(userId);
+        verify(walletRepository, never()).save(any(Wallet.class));
+        verifyNoInteractions(walletTransactionRepository);
+    }
+
+    @Test
+    void createWalletShouldCreateNewWalletWhenWalletDoesNotExist() {
+        UUID walletId = UUID.randomUUID();
+        UUID userId = UUID.randomUUID();
+
+        WalletCreationRequest request = mock(WalletCreationRequest.class);
+
+        Wallet savedWallet = Wallet.builder()
+                .id(walletId)
+                .userId(userId)
+                .balance(BigDecimal.ZERO)
+                .build();
+
+        when(request.getUserId()).thenReturn(userId);
+        when(walletRepository.findByUserId(userId)).thenReturn(Optional.empty());
+        when(walletRepository.save(any(Wallet.class))).thenReturn(savedWallet);
+
+        WalletCreationResponse result = walletService.createWallet(request);
+
+        assertNotNull(result);
+        assertEquals(walletId, result.getWalletId());
+        assertFalse(result.isAlreadyProcessed());
+
+        ArgumentCaptor<Wallet> walletCaptor = ArgumentCaptor.forClass(Wallet.class);
+        verify(walletRepository).save(walletCaptor.capture());
+
+        Wallet walletToSave = walletCaptor.getValue();
+        assertEquals(userId, walletToSave.getUserId());
+
+        verify(request).getUserId();
         verify(walletRepository).findByUserId(userId);
         verifyNoInteractions(walletTransactionRepository);
     }
